K8S/tweets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tweets-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tweetservice
  template:
    metadata:
      labels:
        app: tweetservice
    spec:
      containers:
        - name: tweetservice
          image: rebekadea/tweetservice:latest
