K8S/mssql-user-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-user-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql-user
  template:
    metadata:
      labels:
        app: mssql-user
    spec:
      containers:
        - name: mssql-user
          image: mcr.microsoft.com/mssql/server:2017-latest
          ports: 
            - containerPort: 1435
          volumeMounts:
            - mountPath: /var/opt/mssql/data
              name: mssqldb-user
      volumes:
        - name: mssqldb-user
          persistentVolumeClaim: 
            claimName: mssql-claim-user
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-clusterip-srv-user
spec:
  type: ClusterIP
  selector:
    app: mssql-user
  ports:
    - name: mssql
      protocol: TCP
      port: 1435
      targetPort: 1435
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: mssql-loadbalancer-user
# spec:
#   type: LoadBalancer
#   selector:
#     app: mssql-user
#   ports:
#     - protocol: TCP
#       port: 1435
#       targetPort: 1435
