K8S/newsfeed-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: newsfeed-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: newsfeedservice
  template:
    metadata:
      labels:
        app: newsfeedservice
    spec:
      containers:
        - name: newsfeedservice
          image: rebekadea/newsfeedservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: newsfeed-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: newsfeedservice
  ports:
    - name: newsfeedservice
      protocol: TCP
      port: 80
      targetPort: 80
