K8S/tweets-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: tweetnpservice-srv
spec:
  type: NodePort
  selector:
    app: tweetservice
  ports:
    - name: tweetservice
      protocol: TCP
      port: 80
      targetPort: 80
