K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: kwetter.com
      http: 
        paths:
          - path: /api/tweet
            pathType: Prefix
            backend: 
              service: 
                name: tweets-clusterip-srv
                port: 
                  number: 80
          - path: /api/ut/tweet
            pathType: Prefix
            backend: 
              service: 
                name: usertimeline-clusterip-srv
                port: 
                  number: 80
